--- a/public/sass/css/deckTray.scss
+++ b/public/sass/css/deckTray.scss
@@ -120,7 +120,7 @@
             margin: 0;
             padding: 0;
             padding-left: 5px;
-            width: 70%;
+            width: 80%;
 
             .text {
               font-family: "beleren";
@@ -148,11 +148,11 @@
             }
           }
           .powerTough {
-            width: 15%;
+            width: 5%;
             display: inline-block;
             position: relative;
             font-family: Relay;
-            font-size: 14px;
+            font-size: 12px;
             color: #c2c2c2;
             top: -8px;
             text-align: left;
